<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#fff"
    >

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/init_time"
        android:gravity="center"
        android:textSize="40sp"
        android:textColor="#000"
        android:layout_marginTop="40dp"
        />
    <TextView
        android:id="@+id/sectionRecordTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/init_time"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="#ccc"
        android:layout_below="@+id/timeTextView"
        android:visibility="invisible"
        />

    <LinearLayout
        android:id="@+id/recordingLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:layout_below="@+id/sectionRecordTextView"
        android:layout_marginTop="30dp"
        android:visibility="gone"
        >
        <LinearLayout
            android:id="@+id/recordingTextViewLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            >
            <View
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.2"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.3"
                android:text="@string/section"
                android:gravity="center"
                android:textColor="#ccc"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1.25"
                android:text="@string/section_record"
                android:gravity="center"
                android:textColor="#ccc"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1.256"
                android:text="@string/total_time"
                android:gravity="center"
                android:textColor="#ccc"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ccc"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            />
        <ScrollView
            android:id="@+id/recordListScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recordingList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/recycler_view_holder"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/buttonPanelLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        >
        <Button
            android:id="@+id/recordingResetButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@drawable/round_button"
            android:text="@string/record"
            android:enabled="false"
            />
        <Button
            android:id="@+id/startStopButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@drawable/round_button_start"
            android:text="@string/start"
            android:textColor="#fff"
            />
    </LinearLayout>



</RelativeLayout>